# cockpit-tools

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.en.md  README.md  announcements.json  package-lock.json  package.json  remote-config.json
.github/workflows/: build-matrix.yml  platform-packages.yml  release.yml
Casks/: cockpit-tools.rb
crates/cockpit-antigravity-adapter/: Cargo.toml
crates/cockpit-antigravity-ide-adapter/: Cargo.toml
crates/cockpit-antigravity-ide-adapter/src/: main.rs
docs/: platform-hot-update-architecture.md  platform-integration-guide.md
platform-packages/: index.json
platform-packages/antigravity/: manifest.json
platform-packages/antigravity_ide/: manifest.json
release-artifacts/: SHA256SUMS.txt
scripts/: build-platform-ui.cjs  check_locales.cjs  package-platform-package.cjs  prepare-tauri.cjs  prepare-test-channel-version.cjs  smoke-platform-adapters.cjs  smoke-platform-ui-contract.cjs  tauri-dev-app-runner.cjs  tauri-dev.cjs  update_locales.cjs  verify-codex-platform-contract.cjs  verify-platform-packages.cjs
scripts/release/: build_merged_latest_json.cjs
sidecars/cockpit-cliproxy/: main.go  main_test.go
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: AutoSwitchAccountScopeSelector.css  AutoSwitchAccountScopeSelector.tsx  CodexLocalAccessModal.css  CodexLocalAccessModal.tsx  ExportJsonModal.tsx  GroupSettingsModal.tsx  InstancesManager.tsx  LogViewerModal.tsx  (+10 more)
src/types/: codex.ts  (+8 more)
(+247 files in other folders)
