[package]
name = "cockpit-antigravity-ide-adapter"
version = "0.1.0"
edition = "2021"
authors = ["jlcodes"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
cockpit-core = { path = "../cockpit-core" }
base64 = "0.22"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
